@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-* Changed: use InputStream Adaptive for NPO (Fixes #1073)
+* Fixed: NPO Complete listing (Fixes #1079)
 
 [I]Previous Changes[/I]
+* Changed: use InputStream Adaptive for NPO (Fixes #1073)
 * Fixed: NPO live radio streams (Fixes #1061)
 * Changed: renamed Uitzendinggemist to NPO Start (Fixes #1059)
 * Fixed: NOS.nl streams did not start (Fixes #1048)
